tests/cases/device_definition_errors/diagnostics.kdl.txt
  error: Unexpected node
   ╭─[cases/device_definition_errors/input.kdl:1:1]
 1 │ a 1
   · ┬
   · ╰── The unexpected node
 2 │ 
   ╰────
  help: Expected a node with one of these names: `device`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:3:1]
 2 │ 
 3 │ device {
   · ───┬──
   ·    ╰── For this object
 4 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:7:1]
 6 │ 
 7 │ device 1 {
   · ───┬── ┬
   ·    │   ╰── Found this entry instead which is not a valid name
   ·    ╰── For this object
 8 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:11:1]
 10 │     
 11 │ ╭─▶ device FooD0 {
 12 │ │   
 13 │ ├─▶ }
    · ╰──── The empty node
 14 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:15:14]
 14 │ 
 15 │ device FooD1 abc def {
    ·              ─┬─ ─┬─
    ·               │   ╰── This entry is unexpected
    ·               ╰── This entry is unexpected
 16 │ 
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:15:1]
 14 │     
 15 │ ╭─▶ device FooD1 abc def {
 16 │ │   
 17 │ ├─▶ }
    · ╰──── The empty node
 18 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:20:5]
 19 │ device FooD2 {
 20 │     blah 123
    ·     ──┬─
    ·       ╰── The unexpected node
 21 │ }
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:25:5]
 23 │ device FooD3 {
 24 │     default-register-access RW
    ·     ─────────────┬────────────
    ·                  ╰── The original node
 25 │     default-register-access RO
    ·     ─────────────┬────────────
    ·                  ╰── The duplicate node
 26 │ }
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:29:29]
 28 │ device FooD4 {
 29 │     default-register-access Blah
    ·                             ──┬─
    ·                               ╰── Expected one of these values: `RW`, `RO`, `WO`
 30 │     default-buffer-access
    ╰────

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:30:5]
 29 │     default-register-access Blah
 30 │     default-buffer-access
    ·     ──────────┬──────────
    ·               ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 31 │     default-field-access RW RO WO
    ╰────
  help: Check the book for all the requirements

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:31:29]
 30 │     default-buffer-access
 31 │     default-field-access RW RO WO
    ·                             ─┬ ─┬
    ·                              │  ╰── This entry is unexpected
    ·                              ╰── This entry is unexpected
 32 │ }
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:35:29]
 34 │ device FooD5 {
 35 │     default-register-access value=RW
    ·                             ────┬───
    ·                                 ╰── This entry was expected to be anonymous
 36 │     register-address-type u8
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:35:5]
 34 │ device FooD5 {
 35 │     default-register-access value=RW
    ·     ───────────┬───────────
    ·                ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 36 │     register-address-type u8
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:37:26]
 36 │     register-address-type u8
 37 │     command-address-type 16
    ·                          ─┬
    ·                           ╰── Unexpected type: expected a string
 38 │     default-bit-order msb0
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:38:23]
 37 │     command-address-type 16
 38 │     default-bit-order msb0
    ·                       ──┬─
    ·                         ╰── Expected one of these values: `LSB0`, `MSB0`
 39 │     defmt-feature lol
    ╰────

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:47:5]
 46 │ 
 47 │     registah
    ·     ────┬───
    ·         ╰── The unexpected node
 48 │     register
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`

  error: Missing object name
    ╭─[cases/device_definition_errors/input.kdl:48:5]
 47 │     registah
 48 │     register
    ·     ────┬───
    ·         ╰── For this object
 49 │     register foor1 {
    ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `register Foo { }`

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:49:14]
 48 │     register
 49 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `address` node
 50 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:49:14]
 48 │     register
 49 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 50 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:53:9]
 52 │     register foor2 {
 53 │         address
    ·         ───┬───
    ·            ╰── This node should have one or more of these entries: `integer`
 54 │         address a
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:54:17]
 53 │         address
 54 │         address a
    ·                 ┬
    ·                 ╰── Unexpected type: expected a integer
 55 │         address 1
    ╰────

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:56:9]
 54 │         address a
 55 │         address 1
    ·         ───┬───
    ·            ╰── The original node
 56 │         address 2
    ·         ───┬───
    ·            ╰── The duplicate node
 57 │         repeat
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:57:9]
 56 │         address 2
 57 │         repeat
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 58 │         reset-value 0x2000_0000
    ╰────
  help: Check the book for all the requirements

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:52:14]
 51 │     }
 52 │     register foor2 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 53 │         address
    ╰────
  help: Check the book to see all required nodes

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:62:16]
 61 │         address -1
 62 │         repeat count=18_446_744_073_709_551_616 stride=1
    ·                ────────────────┬───────────────
    ·                                ╰── Value is out of the allowable range: 0..2^64
 63 │         allow-address-overlap #true
    ╰────
  help: The count is encoded as a u64

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:63:31]
 62 │         repeat count=18_446_744_073_709_551_616 stride=1
 63 │         allow-address-overlap #true
    ·                               ──┬──
    ·                                 ╰── This entry is unexpected
 64 │         reset-value 0x100 0x00
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:64:21]
 63 │         allow-address-overlap #true
 64 │         reset-value 0x100 0x00
    ·                     ──┬──
    ·                       ╰── Value is out of the allowable range: 0..256
 65 │     }
    ╰────
  help: When specifying the reset values as an array, all numbers must be bytes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:60:14]
 59 │     }
 60 │     register foor3 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 61 │         address -1
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:68:9]
 67 │         address 0
 68 │         fields {
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `size-bits`
 69 │ 
    ╰────
  help: Check the book for all the requirements

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:74:16]
 73 │         address 1
 74 │         fields size-bits=-1 {
    ·                ──────┬─────
    ·                      ╰── Value is out of the allowable range: 0..2^32
 75 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:80:55]
 79 │         address 2
 80 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬────── ──────┬──────
    ·                                               │             ╰── The duplicate entry
    ·                                               ╰── The original entry
 81 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:80:83]
 79 │         address 2
 80 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬────── ───────┬──────
    ·                                                                           │              ╰── The duplicate entry
    ·                                                                           ╰── The original entry
 81 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:80:116]
 79 │         address 2
 80 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                                                  ────────┬──────── ────────────┬───────────
    ·                                                                                                          │                     ╰── The duplicate entry
    ·                                                                                                          ╰── The original entry
 81 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:80:16]
 79 │         address 2
 80 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 81 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:80:40]
 79 │         address 2
 80 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬──────
    ·                                               ╰── Expected one of these values: `LSB0`, `MSB0`
 81 │ 
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:80:69]
 79 │         address 2
 80 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬──────
    ·                                                                           ╰── Expected one of these values: `LE`, `BE`
 81 │ 
    ╰────

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:86:16]
 85 │         address 3
 86 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 87 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:86:40]
 85 │         address 3
 86 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                        ──────┬─────
    ·                                              ╰── Unexpected type: expected a string
 87 │ 
    ╰────

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:86:53]
 85 │         address 3
 86 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                                     ───────┬───────
    ·                                                            ╰── Unexpected type: expected a string
 87 │ 
    ╰────

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:94:20]
 93 │         fields size-bits=8 {
 94 │             bar RW RO
    ·                 ─┬ ─┬
    ·                  │  ╰── The duplicate entry
    ·                  ╰── The original entry
 95 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:94:13]
 93 │         fields size-bits=8 {
 94 │             bar RW RO
    ·             ─┬─
    ·              ╰── This node should have one or more of these entries: `address ("@<u32>:<u32>")`
 95 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: Check the book for all the requirements

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:95:17]
 94 │             bar RW RO
 95 │             bar @a @-1:8 @3 @3:0
    ·                 ─┬
    ·                  ╰── Value could not be parsed correctly. Use the following format: `@<u32>`
 96 │             baz @7:4 blah
    ╰────
  help: An example: `@10`

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:95:20]
 94 │             bar RW RO
 95 │             bar @a @-1:8 @3 @3:0
    ·                    ──┬──
    ·                      ╰── Value could not be parsed correctly. Use the following format: `@<u32>:<u32>`
 96 │             baz @7:4 blah
    ╰────
  help: An example: `@7:0`

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:95:29]
 94 │             bar RW RO
 95 │             bar @a @-1:8 @3 @3:0
    ·                          ─┬ ──┬─
    ·                           │   ╰── The duplicate entry
    ·                           ╰── The original entry
 96 │             baz @7:4 blah
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:96:22]
 95 │             bar @a @-1:8 @3 @3:0
 96 │             baz @7:4 blah
    ·                      ──┬─
    ·                        ╰── Expected one of these values: `@<u32>`, `@<u32>:<u32>`, `RW`, `RO`, `WO`
 97 │         }
    ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:104:14]
 103 │             (uint)baz @2:1
 104 │             (i16a)quux @4:3
     ·              ──┬─
     ·                ╰── Expected one of these values: `bool`, `uint`, `int`, `u8`, `u16`, `u32`, `i8`, `i16`, `i32`, `i64`, `u64`, `<base>:<target>`, `<base>:<target>?`
 105 │             (:MyCustomType?)qus @6:5
     ╰────

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:117:13]
 116 │             }
 117 │             baz @3:2 {
     ·             ─┬─
     ·              ╰── Add conversion type specification to this field
 118 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:120:14]
 119 │             }
 120 │             (uint)bam @5:4 {
     ·              ──┬─ ─┬─
     ·                │   ╰── Add conversion type specification to this field
     ·                ╰── A type specifier already exists, but misses the conversion
 121 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:125:19]
 124 │                 A
 125 │                 B 1.0
     ·                   ─┬─
     ·                    ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 126 │                 C default-value
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:126:19]
 125 │                 B 1.0
 126 │                 C default-value
     ·                   ──────┬──────
     ·                         ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 127 │                 D #null 2
     ╰────

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:127:25]
 126 │                 C default-value
 127 │                 D #null 2
     ·                         ┬
     ·                         ╰── This entry is unexpected
 128 │             }
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:127:19]
 126 │                 C default-value
 127 │                 D #null 2
     ·                   ──┬──
     ·                     ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 128 │             }
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:131:5]
 130 │     }
 131 │     command {
     ·     ───┬───
     ·        ╰── For this object
 132 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `command Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:131:5]
 130 │     }
 131 │     command {
     ·     ───┬───
     ·        ╰── This command is missing the required `address` node
 132 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:134:13]
 133 │     }
 134 │     command fooc0 {
     ·             ──┬──
     ·               ╰── This command is missing the required `address` node
 135 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:139:9]
 138 │         address 0
 139 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 140 │         blah
     ╰────
  help: Check the book for all the requirements

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:137:5]
 136 │     }
 137 │     command fooc1 {
     ·     ───┬───
     ·        ╰── The unexpected node
 138 │         address 0
     ╰────
  help: Expected a node with one of these names: `allow-address-overlap`, `address`, `repeat`, `in`, `out`

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:141:9]
 140 │         blah
 141 │         in {
     ·         ─┬
     ·          ╰── This node should have one or more of these entries: `size-bits`
 142 │             
     ╰────
  help: Check the book for all the requirements

